# multigame-pcgrl

./: .dockerignore  .env.example  .gitignore  .gitmodules  .gitmodules.template  Dockerfile  README.md  _test_d5_cond.py  collect_buffer.py  collect_traj.py  eval.py  eval_cpcgrl.py  eval_mgpcgrl.py  eval_random.py  eval_sweep.py  example_multigame_dataset.py  experiment.md  extract_embedding.py  game_list.csv  game_list_select.csv  models.py  pyproject.toml  requirements.txt  run_cache_tests_local.py  run_docker.sh  sweep.py  test.ipynb  test_eval_result.txt  train.py  train_clip.py  train_clip_decoder.py  train_clip_decoder_unseen.py  train_cpcgrl.py  train_encoder.py  train_ipcgrl.py  train_ipcgrl_encoder.py  train_ipcgrl_encoder_mg.py  train_mg_pcgrl.py  train_mgpcgrl.py  train_pretrained_clip_pcgrl.py  (+2 more)
.github/workflows/: multigame-cache-tests.yml  test_cpcgrl.yml  vipcgrl_checkpoint.yml
conf/: collect_buffer.yaml  config.py  config_sweeps.py  eval_cpcgrl.yaml  eval_mgpcgrl.yaml  eval_random.yaml  game_utils.py  pretrained_clip_pcgrl.yaml  train_clip_decoder.yaml  train_clip_decoder_unseen.yaml  train_cpcgrl.yaml  train_ipcgrl.yaml  train_ipcgrl_encoder_mg.yaml  train_mgpcgrl.yaml  train_vipcgrl.yaml
conf/sweeps/: arf_seqnca_dungeon.yaml  fixed_arf_dungeon.yaml
dataset/: __init__.py  annotate.py
dataset/annotation/: annotate.py  dungeon_reward_annotations.csv
dataset/cpcgrl_buffer/: README.md  __init__.py  build_pair_dataset.py  cpcgrl_pair_dataset.npz  dataset.py  metadata.json
dataset/dungeon_level_dataset/: .gitignore  README.md  __init__.py  build_dataset.py  build_samples.py  dataset.py  dungeon_levels.npz  dungeon_levels_metadata.csv  requirements.txt
dataset/multigame/: README.md  __init__.py  base.py  cache_utils.py  dataset.py  render.py  stats.py  tags.py  tile_mapping.json  tile_utils.py
dataset/reward_annotations/: annotate.py  annotation_figure.ipynb  doom_reward_annotations.csv  doom_reward_annotations_placeholder.csv  dungeon_reward_annotations.csv  generate_instructions.py  instruction_config.py  pokemon_reward_annotations.csv  pokemon_reward_annotations_placeholder.csv  resubmit_keys.py  sokoban_reward_annotations.csv  sokoban_reward_annotations_placeholder.csv  system_prompt.txt  zelda_reward_annotations.csv  zelda_reward_annotations_placeholder.csv
dataset/scripts/: generate_d2_annotations.py  generate_dungeon_reward_annotations.py  generate_placeholder_reward_annotations.py  render_samples.py
debug/: inspect_ckpt.py  scenario_levels.py  visualize_evaluation.py  visualize_quantized_classes.py
encoder/: clip_model.py  model.py  schedular.py
encoder/data/: __init__.py  batch.py  calculate_duplicates.py  clip_batch.py  generate_pair_indices.py  get_unique_pair_indices.py  instruct_utils.py  mlp_batch.py  pairing_maps.py
encoder/utils/: decoder_reward.py  game_palette.py  path.py  training.py  visualize.py
envs/: feature.py  pathfinding.py  pcgrl_env.py  pcgrl_env_play_old.py  play_pcgrl_env.py  solution.py  utils.py
envs/probs/: _problem.py  binary.py  dungeon.py  dungeon2.py  dungeon3.py  maze.py  maze_play.py  multigame.py  problem.py
evaluator/: __init__.py  fitness.py  reward.py
instruct/: scenario_prompt.json
instruct_rl/: __init__.py  dataclass.py  evaluate.py
multigame_evaluator/: __init__.py
purejaxrl/: structures.py  wrappers.py
results/: build_benchmark_table.py  condition_progress_report.py  embed_markdown_images_base64.py  eval_downloader.py  make_gamewise_summary.py  render_markdown_pdf.py  reward_enum_visualizer.py
sketch_style_transfer/: .gitignore  translater.ipynb
tests/: conftest.py  test_cpcgrl_baseline.py  test_decoder_reward.py  test_decoder_reward_inject.py  test_ipcgrl_baseline.py  test_ipcgrl_checkpoint.py  test_mgpcgrl_checkpoint.py  test_multigame_evaluator.py  test_multigame_render.py  test_multigame_rl.py  test_reward_annotations.py  test_subsample_determinism.py  test_tile_integrity.py  test_vipcgrl_baseline.py  test_vipcgrl_checkpoint.py
(+269 files in other folders)
